@@ -19,7 +19,8 @@ class LuaUnsyncedRead {
 		static int GetGameName(lua_State* L);
 		static int GetMenuName(lua_State* L);
 
-		static int GetLuaMemoryUsage(lua_State* L);
+		static int GetLuaMemUsage(lua_State* L);
+		static int GetVidMemUsage(lua_State* L);
 
 		static int GetDrawFrame(lua_State* L);
 		static int GetFrameTimeOffset(lua_State* L);
